Bug 76583 - Floating table information is not preserved in RT file.
Summary: Floating table information is not preserved in RT file.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Umesh Kadam
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2014-03-25 09:03 UTC by Umesh Kadam
Modified: 2023-09-14 19:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File has two tables one of which is floating. (13.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-25 09:03 UTC, Umesh Kadam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Umesh Kadam 2014-03-25 09:03:59 UTC
Created attachment 96347 [details]
File has two tables one of which is floating.

Issue Simulation:
-------------------
1) Open the file in LO
2) Save as docx 
3) Open the file in MSO

Expected Behavior:
-------------------
The round-tripped file should be visually same as that of the original i.e all the information should be preserved.

Observed Behavior:
-------------------
The floating table information is not preserved, due to which the tables in RT files appear to be merged.
Comment 1 Jorendc 2014-03-25 18:24:17 UTC
I can confirm that behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: aeab0183e86fe011d32058864c02b2de4da32dc9
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-24_05:49:57

Kind regards,
Joren
Comment 2 Commit Notification 2014-04-09 08:07:51 UTC
umeshkadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48dd43703914b9c756d2ecda1872512b47463902

fdo#76583 DOCX import: Floating table information is not preserved in RT file.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.