fdo#76583 DOCX import: Floating table information is not preserved in RT file.

- Earlier the table width was compared with the text area to decide if the
  fly has to be created for the floating table.
- In most of the cases such floating tables were the ones which did not have
  any text around them and not importing such tables as fly made sense.
- But there are some scenarios where in the floating tables have width
  greater than the text area but are positioned in a way such that they begin
  before left margin and end before the right margin moreover they appear to be
  really floating (unlike in first scenario) as they have text around them since
  there is still room for the text.
- Handled this scenario and added a UT.

Reviewed on:
	https://gerrit.libreoffice.org/8840

Change-Id: I7ea25e04ed7c6315e4e4fe4b67badf451c30cd0c